SEO meta tags added

--- a/index-medics.html
+++ b/index-medics.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
-    <title>Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії</title>
-    <meta name="description" content = "Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
-    <meta name="keywords" content="Купити ліки з Європи, Якісні європейські ліки, Ліки, швидка доставка, Якісні ліки недорого, Купити ліки швидко, Ліки з доставкою, Доставка ліків поштою, Купити ліки європейського виробництва, Ліки із Європи недорого, Купити ліки наложеним платежем">
+    <title>Високоефективні лікувальні засоби в асортименті аптеки Фарміталь.</title>
+    <meta name="description" content="Інтернет-аптека Farmital пропонує медикаментозні засоби із Європи для внутрішнього і зовнішнього застосування, що ефективно лікують різноманітні хвороби.">
+    <meta name="keywords" content="Протисудомні ліки із Європи, Протизапальне, Протиалергічний засіб, Протиподагричні ліки, Протисвербіжний засіб, Ліки для важкозаживаючих ран, Лікування виразок та ерозій внутрішніх органів, Засіб для відновлнення структури клітин тіла, Ліки для скорочення м'язів матки, Вітаміни для розвитку зубів">
     <meta name="robots" content="index follow">
     <meta name="author" content="Інтернет Аптека FarmItal">
     <meta name="publisher" content="FarmItal">
-    <link rel="canonical" href="https://farmital.com.ua/">
+    <link rel="canonical" href="https://farmital.com.ua/index-medics.html">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">[ {
@@ -24,10 +24,10 @@
         "priceRange" : "330-1150 грн"
     } ]
     </script>
-    <meta property="og:title" content="Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії">
-    <meta property="og:description" content="Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta property="og:title" content="Високоефективні лікувальні засоби в асортименті аптеки Фарміталь.">
+    <meta property="og:description" content="Інтернет-аптека Farmital пропонує медикаментозні засоби із Європи для внутрішнього і зовнішнього застосування, що ефективно лікують різноманітні хвороби.">
     <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
-    <meta property="og:url" content="https://farmital.com.ua">
+    <meta property="og:url" content="https://farmital.com.ua/index-medics.html">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-medics.css">
 </head>
