--- a/index-plavix.html
+++ b/index-plavix.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content = "Плавікс,Plavix,Плавикс за найнижчою ціною в Україні!">
-    <title>Купити Плавікс,Plavix,Плавикс в Україні на фарміталь</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
+    <title>Плавікс №84 (Plavix №84 Poland) для відновлення нормальної функції тромбоцитів.</title>
+    <meta name="description" content="Пропонуємо польський медпрепарат Плавікс №84 з діючою речовиною - клопідогрель для лікування після інфаркту, інсульту та від захворювання периферичних артерій.">
+    <meta name="keywords" content="Клопідогрель діюча речовина, Лікування інсульту, Лікування інфаркту, Плавікс для периферичних артерій, Відновлення функції тромбоцитів, Таблетки Плавікс №84 недорого, Plavix №84 Poland, Плавікс №84 Польща купити, Таблетки для тромболітичної терапії, Атеротромбоз судин нижніх кінцівок">
+    <meta name="robots" content="index follow">
+    <meta name="author" content="Інтернет Аптека FarmItal">
+    <meta name="publisher" content="FarmItal">
+    <link rel="canonical" href="https://farmital.com.ua/index-plavix.html">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">[ {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Інтернет Аптека FarmItal",
+        "image" : "https://farmital.com.ua/img/farmital-logo.png",
+        "telephone" : [ "+38 (097) 930-17-88", "+38 (095) 937-16-99", "+38 (063) 129-40-99" ],
+        "email" : "likital687@gmail.com",
+        "priceRange" : "330-1150 грн"
+    } ]
+    </script>
+    <meta property="og:title" content="Плавікс №84 (Plavix №84 Poland) для відновлення нормальної функції тромбоцитів.">
+    <meta property="og:description" content="Пропонуємо польський медпрепарат Плавікс №84 з діючою речовиною - клопідогрель для лікування після інфаркту, інсульту та від захворювання периферичних артерій.">
+    <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
+    <meta property="og:url" content="https://farmital.com.ua/index-plavix.html">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-plavix.css">
 </head>
 <body>
