--- a/index-ultraproct-sup.html
+++ b/index-ultraproct-sup.html
@@ -3,9 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style-ultraproct.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
     <title>Купити Ліки Ультрапрокт свічки в Україні - Ultraproct supposte на Фармітал</title>
+    <meta name="description" content="Пропонуємо мазеві свічки Ультрапрокту (Ultraproct supposte) для лікування гемороїдальних вузлів, поверхневих тріщин заднього проходу, проктиту.">
+    <meta name="keywords" content="Проктологічний засіб Ультрапрокт, Ультрапрокт свічки купити, Ультрапрокт едорого, Свічки для гемороїдальних вузлів, Лікування тріщин заднього проходу, Мазеві свічки від проктиту, Ultraproct supposte, Мазь ректальна Ультрапрокт, Ультрапрокт Італія від геморою, Флуокортолон та анестетик Цинхокаїн">
+    <meta name="robots" content="index follow">
+    <meta name="author" content="Інтернет Аптека FarmItal">
+    <meta name="publisher" content="FarmItal">
+    <link rel="canonical" href="https://farmital.com.ua/index-ultraproct-sup.html">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">[ {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Інтернет Аптека FarmItal",
+        "image" : "https://farmital.com.ua/img/farmital-logo.png",
+        "telephone" : [ "+38 (097) 930-17-88", "+38 (095) 937-16-99", "+38 (063) 129-40-99" ],
+        "email" : "likital687@gmail.com",
+        "priceRange" : "330-1150 грн"
+    } ]
+    </script>
+    <meta property="og:title" content="Купити Ліки Ультрапрокт свічки в Україні - Ultraproct supposte на Фармітал">
+    <meta property="og:description" content="Пропонуємо мазеві свічки Ультрапрокту (Ultraproct supposte) для лікування гемороїдальних вузлів, поверхневих тріщин заднього проходу, проктиту.">
+    <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
+    <meta property="og:url" content="https://farmital.com.ua/index-ultraproct-sup.html">
+    <meta property="og:type" content="website">
+    <link rel="stylesheet" href="css/style-ultraproct.css">
 </head>
 <body>
     <header>
