--- a/index-colchicine.html
+++ b/index-colchicine.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
-    <title>Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії</title>
-    <meta name="description" content = "Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
-    <meta name="keywords" content="Купити ліки з Європи, Якісні європейські ліки, Ліки, швидка доставка, Якісні ліки недорого, Купити ліки швидко, Ліки з доставкою, Доставка ліків поштою, Купити ліки європейського виробництва, Ліки із Європи недорого, Купити ліки наложеним платежем">
+    <title>Протиподагричний засіб Колхіцин (Colchicine) знижує запалення в тканинах.</title>
+    <meta name="description" content="Пропонуємо ліки для зниження запальної реакції на відкладання кристалів мононатрію урату в тканинах та зменшення утворення молочної кислоти, з якої утворюються кристали урату.">
+    <meta name="keywords" content="Ліки від подагри, Колхіцин від подагри, Ліки проти запалень в тканинах, Колхіцин проти утворення кристалів уратів, Знеболюючі таблетки при подагрі, Пригнічення утворення солей сечової кислоти, Профілактика подагри, Відкладення солей сечової кислоти, Протизапальні пігулки, Купити колхіцин">
     <meta name="robots" content="index follow">
     <meta name="author" content="Інтернет Аптека FarmItal">
     <meta name="publisher" content="FarmItal">
-    <link rel="canonical" href="https://farmital.com.ua/">
+    <link rel="canonical" href="https://farmital.com.ua/index-colchicine.html">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">[ {
@@ -23,10 +23,10 @@
         "priceRange" : "330-1150 грн"
     } ]
     </script>
-    <meta property="og:title" content="Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії">
-    <meta property="og:description" content="Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta property="og:title" content="Протиподагричний засіб Колхіцин (Colchicine) знижує запалення в тканинах.">
+    <meta property="og:description" content="Пропонуємо ліки для зниження запальної реакції на відкладання кристалів мононатрію урату в тканинах та зменшення утворення молочної кислоти, з якої утворюються кристали урату.">
     <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
-    <meta property="og:url" content="https://farmital.com.ua">
+    <meta property="og:url" content="https://farmital.com.ua/index-colchicine.html">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-colchicine.css">
 </head>
