--- a/index-contact.html
+++ b/index-contact.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
-    <title>Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії</title>
-    <meta name="description" content = "Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
-    <meta name="keywords" content="Купити ліки з Європи, Якісні європейські ліки, Ліки, швидка доставка, Якісні ліки недорого, Купити ліки швидко, Ліки з доставкою, Доставка ліків поштою, Купити ліки європейського виробництва, Ліки із Європи недорого, Купити ліки наложеним платежем">
+    <title>Порядок роботи Інтернет-Аптеки Farmital. Контакти для звернень клієнтів.</title>
+    <meta name="description" content="Аптека Farmital працює щоденно з 8:00 до 18:00 без вихідних. Відправлення замовлень Новою поштою та Укрпоштою за передоплатою на картку або наложним платежем.">
+    <meta name="keywords" content="Контактні особи, Електронна адреса аптеки, Доставка ліків, Передоплата на картку, Наложний платіж, Доставка ліків по Україні, Доставка у всі відділення Нової пошти, Доставка у всі відділення Укрпошти, Інтернет-аптека без вихідних, Контактні телефони аптеки">
     <meta name="robots" content="index follow">
     <meta name="author" content="Інтернет Аптека FarmItal">
     <meta name="publisher" content="FarmItal">
-    <link rel="canonical" href="https://farmital.com.ua/">
+    <link rel="canonical" href="https://farmital.com.ua/index-contact.html">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">[ {
@@ -23,10 +23,10 @@
         "priceRange" : "330-1150 грн"
     } ]
     </script>
-    <meta property="og:title" content="Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії">
-    <meta property="og:description" content="Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta property="og:title" content="Порядок роботи Інтернет-Аптеки Farmital. Контакти для звернень клієнтів.">
+    <meta property="og:description" content="Аптека Farmital працює щоденно з 8:00 до 18:00 без вихідних. Відправлення замовлень Новою поштою та Укрпоштою за передоплатою на картку або наложним платежем.">
     <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
-    <meta property="og:url" content="https://farmital.com.ua">
+    <meta property="og:url" content="https://farmital.com.ua/index-contact.html">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-contact.css">
 </head>
