--- a/index-methergin.html
+++ b/index-methergin.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content = "Метергін-(Метілeргометрін) / Methergin(Metilergometrina) за найнижчою ціною в Україні!">
-    <title>Купити Метергін-(Метілeргометрін) / Methergin(Metilergometrina) в Україні на фарміталь</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
+    <title>Акушерський засіб Метергін/Метілeргометрін (Methergin/Metilergometrina) для скорочення м'язів матки.</title>
+    <meta name="description" content="Пропонуємо акушерський засіб Метергін (Метілeргометрін) в ампулах для  лікування неповної інволюції матки, гіпотонічних кровотеч у післяпологовому періоді.">
+    <meta name="keywords" content="Акушерський Метегрін, Розчин Метілергометріну купити, Метегрін в ампулах недорого, Гіпотонічні кровотечі після пологів, Для скорочення м'язів матки, Підвищення тонусу матки, Methergin(Metilergometrina), Препарат при кесаревому розтині, Ін'єкції при атонічній матковій кровотечі, Субінволюція матки">
+    <meta name="robots" content="index follow">
+    <meta name="author" content="Інтернет Аптека FarmItal">
+    <meta name="publisher" content="FarmItal">
+    <link rel="canonical" href="https://farmital.com.ua/index-methergin.html">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">[ {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Інтернет Аптека FarmItal",
+        "image" : "https://farmital.com.ua/img/farmital-logo.png",
+        "telephone" : [ "+38 (097) 930-17-88", "+38 (095) 937-16-99", "+38 (063) 129-40-99" ],
+        "email" : "likital687@gmail.com",
+        "priceRange" : "330-1150 грн"
+    } ]
+    </script>
+    <meta property="og:title" content="Акушерський засіб Метергін/Метілeргометрін (Methergin/Metilergometrina) для скорочення м'язів матки.">
+    <meta property="og:description" content="Пропонуємо акушерський засіб Метергін (Метілeргометрін) в ампулах для  лікування неповної інволюції матки, гіпотонічних кровотеч у післяпологовому періоді.">
+    <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
+    <meta property="og:url" content="https://farmital.com.ua/index-methergin.html">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-methergin.css">
 </head>
 <body>
