--- a/index-zymafluor.html
+++ b/index-zymafluor.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
-    <title>Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії</title>
-    <meta name="description" content = "Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
-    <meta name="keywords" content="Купити ліки з Європи, Якісні європейські ліки, Ліки, швидка доставка, Якісні ліки недорого, Купити ліки швидко, Ліки з доставкою, Доставка ліків поштою, Купити ліки європейського виробництва, Ліки із Європи недорого, Купити ліки наложеним платежем">
+    <title>Вітамінний засіб Зімафлуор (Zymafluor) для здорового розвитку зубів у дітей</title>
+    <meta name="description" content="Пропонуємо вітамінний засіб Зімафлуор,Зимафлуор-(Zymafluor) для сприяння розвитку здорових зубів у дітей.">
+    <meta name="keywords" content="Вітаміни для здоров'я дитячих зубів, Здоров'я зубів дитини, Зміцнення зубів у дітей, Попередження карієсу, Запобігання пульпіту, Періодонтит і гранулема, Профілактика зубної кісти, Зімафлуор купити, Zymafluor низькі ціни, Пероральні краплі або пігулки Зімафлуор, Вітамін при носінні зубних брекетів">
     <meta name="robots" content="index follow">
     <meta name="author" content="Інтернет Аптека FarmItal">
     <meta name="publisher" content="FarmItal">
-    <link rel="canonical" href="https://farmital.com.ua/">
+    <link rel="canonical" href="https://farmital.com.ua/index-zymafluor.html">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">[ {
@@ -23,10 +23,10 @@
         "priceRange" : "330-1150 грн"
     } ]
     </script>
-    <meta property="og:title" content="Інтернет-Аптека Фарміталь продаж ліків, ліки на замовлення з Італії">
-    <meta property="og:description" content="Інтернет-аптека Farmital пропонує якісні ліки із Європи за найнижчими цінами. Швидка доставка замовлення у всі регіони України. Гнучка система оплати.">
+    <meta property="og:title" content="Вітамінний засіб Зімафлуор (Zymafluor) для здорового розвитку зубів у дітей">
+    <meta property="og:description" content="Пропонуємо вітамінний засіб Зімафлуор,Зимафлуор-(Zymafluor) для сприяння розвитку здорових зубів у дітей.">
     <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
-    <meta property="og:url" content="https://farmital.com.ua">
+    <meta property="og:url" content="https://farmital.com.ua/index-zymafluor.html">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-zymafluor.css">
 </head>
