--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -4,9 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content = "Купить лекарства по самой низкой цене в Украине на фармитале!">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
     <title>Ліки за найнижчими цінами на фармітал</title>
+    <meta name="description" content="Купить лекарства по самой низкой цене в Украине на фармитале!">
+    <meta name="keywords" content="">
+    <meta name="robots" content="index follow">
+    <meta name="author" content="Інтернет Аптека FarmItal">
+    <meta name="publisher" content="FarmItal">
+    <link rel="alternate" href="https://farmital.com.ua/rus/index-medics.html">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <script type="application/ld+json">[ {
+        "@context" : "http://schema.org",
+        "@type" : "LocalBusiness",
+        "name" : "Интернет Аптека FarmItal",
+        "image" : "https://farmital.com.ua/img/farmital-logo.png",
+        "telephone" : [ "+38 (097) 930-17-88", "+38 (095) 937-16-99", "+38 (063) 129-40-99" ],
+        "email" : "likital687@gmail.com",
+        "priceRange" : "330-1150 грн"
+    } ]
+    </script>
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
+    <meta property="og:url" content="https://farmital.com.ua/rus/index-medics.html">
+    <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-medics.css">
 </head>
 
