--- a/index-advantan-50g.html
+++ b/index-advantan-50g.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-ultraproct.css">
+    <meta name="description" content="Купити Адвантан крем 50г,Advantan crema 50g по низькій ціні в Україні!">
     <title>Купити Ліки Адвантан крем 50г в Україні - Advantan crema 50g на Фармітал</title>
 </head>
 <body>
