--- a/index-crestor-40mg.html
+++ b/index-crestor-40mg.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-crestor.css">
+    <meta name="description" content="Купити Крестор 40мг,Crestor 40mg по низькій ціні в Україні!">
     <title>Купити Ліки Крестор 40мг в Україні - Crestor 40mg на Фармітал</title>
 </head>
 <body>
@@ -87,8 +88,7 @@
         <p>З боку сечовивідної системи: у пацієнтів, які приймають Крестор, може виявитися протеїнурія, в основному канальцева. Зміна кількості білка у сечі (від відсутності до слідів або до ++ та більше) спостерігалася у 1% пацієнтів, які отримували 10 - 20 мг препарату, та приблизно у 3% - які приймали 40 мг. Незначні зміни кількості білка у сечіспостерігались при прийомі 20 мг. У більшості випадків протеїнурія зменшуваласяабо зникала при продовженні терапії і не є ознакою виникнення гострого або прогресу вання існуючого захворювання нирок.
             З боку скелетної мускулатури: міалгію, міопатію та рідко рабдоміоліз спостерігали у пацієнтів, які приймали всі дози іособливо у тих, хто приймав препарат у дозі більше 20 мг.
             Дозозалежне підвищення рівнякреатинфосфокінази (КФК) спостерігалось у пацієнтів, які приймали розувастатин; у більшості випадків воно було незначним, безсимптомним та тимчасовим. При підвищенні рівня КФК (у 5 та більше разів порівняно з верхньою межею норми) терапія розув астатином повинна бути призупинена.
-            З боку печінки: як і при прийомі інших інгібіторів ГМГ-КоА редуктази, спостерігалось дозозалежне підвищення рівнівтрансаміназ у невеликої кількості пацієнтів. У більшості випадків воно було незначним, безсимптомним та тимчасовим.
-            У поодиноких випадках можливі алергійні шкірні реакції.</p>
+        </p>
         <h2>Протипоказання:</h2>
         <p>Підвищена чутливість до розувастатину або добудь-якого компонента таблетки;
             захворювання печінки в активній фазі, включаючи стійке підвищення рівнів трансаміназ, яке неможливо пояснити, табудь-яке підвищення рівнів трансаміназ у 3 та більше разів, порівнюючи зверхньою межею норми;</p>
