--- a/index-ultraproct-ung.html
+++ b/index-ultraproct-ung.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-ultraproct.css">
+    <meta name="description" content="Купити Ультрапрокт мазь,Ultraproct unguento за низькою ціною в Україні!">
     <title>Купити Ліки Ультрапрокт мазь в Україні - Ultraproct unguento на Фармітал</title>
 </head>
 <body>
@@ -70,12 +71,12 @@
             Ви можете замовити Ультрапрокт мазь у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
         </p>
         <h2>Основні фізико-хімічні властивості:</h2>
-        <p>мазь біла або жовтувата напівпрозора утубах, супозиторії жовтувато-білі;</p>
+        <p>мазь біла або жовтувата напівпрозора утубах;</p>
         <h2>Склад препарату:</h2>
         <p>1 г мазі містить флуокортолону півалату 0,92мг, флуокортолону капроату 0,95 мг і цинхокаїну гідро хлориду 5 мг;<br>
             допоміжні речовини: 2-октилдодеканол, олія рицинова, олія рицинова гідрогенізована, полі етиленгліколь 400 монорицин олеат, олія цитрус-трояндова ароматизована ;</p>
         <h2>Форма випуску:</h2>
-        <p>Мазь ректальна, супозиторії ректальні.</p>
+        <p>Мазь ректальна.</p>
         <h2>Показання:</h2>
         <p>Гемороїдальні вузли, поверхневі тріщини заднього проходу, проктит.</p>
         <h2>Спосіб застосування та дози:</h2>
