--- a/rus/index-crestor-20mg.html
+++ b/rus/index-crestor-20mg.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-crestor.css">
+    <meta name="description" content="Купить Крестор 20мг,Crestor 20mg по низкой цене в Украине!">
     <title>Купить Лекарство Крестор 20мг в Украине - Crestor 20mg Фармитал</title>
 </head>
 <body>
@@ -84,8 +85,7 @@
         <p>В связи с повышенным риском развития нежелательныхявлений при приеме 40 мг Крестора по сравнению с меньшими дозами, увеличение дозы до 40 мг возможно через 4 недели лечения только у пациентов с тяжелой гиперхолестеринемией и высоким риском развития сердечно-сосудистых осложнений (особенно у пациентов с семейной гиперхолестеринемией), у которых не было достигнуто желаемого результата при применении 20 мг и находящихся под тщательным наблюдением специалистов. Особое наблюдение рекомендовано в начале приема 40 мг препарата.
             Крестор принимают внутрь, не разжевывая, таблетку проглатывают целиком, запивая водой. Крестор можно принимать в любое время независимо от еды.</p>
         <h2>Побочные эффекты:</h2>
-        <p>Со стороны мочевыводящей системы: у пациентов, принимающих Крестор, может оказаться протеинурия, в основном канальцевая. Изменение количества белка в моче (от отсутствия до следов или до ++ и более) наблюдалось у 1% пациентов, получавших 10-20 мг препарата, и примерно у 3% - принимавших 40 мг. Незначительные изменения количества белка в моче наблюдались при приеме 20 мг. В большинстве случаев протеинурия уменьшалась или исчезала при продолжении терапии и не является признаком возникновения острого или прогрессирования существующего заболевания почек.
-            Со стороны скелетной мускулатуры: миалгия, миопатияи редко рабдомиолиз наблюдали у пациентов, принимавших все дозы и особенно у тех, кто принимал препарат в дозе более 20 мг.
+        <p>Со стороны скелетной мускулатуры: миалгия, миопатияи редко рабдомиолиз наблюдали у пациентов, принимавших все дозы и особенно у тех, кто принимал препарат в дозе более 20 мг.
             Дозозависимое повышение уровня креатинфосфокиназы (КФК) наблюдалось у пациентов, принимавших розувастатин; в большинстве случаев оно было незначительным, бессимптомным и временным. При повышении уровня КФК (в 5 и более раз по сравнению с верхним пределом нормы) терапия разув астатином должна быть приостановлена.
             Со стороны печени: как и при приеме других ингибиторовГМГ-КоА редуктазы, наблюдалось дозозависимое повышение уровней трансаминаз у небольшого количества пациентов. В большинстве случаев оно было незначительным, бессимптомным и временным.
             В редких случаях возможны аллергические кожные реакции.</p>
