--- a/rus/index-crestor-40mg.html
+++ b/rus/index-crestor-40mg.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-crestor.css">
+    <meta name="description" content="Купить Крестор 40мг,Crestor 40mg по низкой цене в Украине!">
     <title>Купить Лекарство Крестор 40мг в Украине - Crestor 40mg Фармитал</title>
 </head>
 <body>
@@ -87,8 +88,7 @@
         <p>Со стороны мочевыводящей системы: у пациентов, принимающих Крестор, может оказаться протеинурия, в основном канальцевая. Изменение количества белка в моче (от отсутствия до следов или до ++ и более) наблюдалось у 1% пациентов, получавших 10-20 мг препарата, и примерно у 3% - принимавших 40 мг. Незначительные изменения количества белка в моче наблюдались при приеме 20 мг. В большинстве случаев протеинурия уменьшалась или исчезала при продолжении терапии и не является признаком возникновения острого или прогрессирования существующего заболевания почек.
             Со стороны скелетной мускулатуры: миалгия, миопатияи редко рабдомиолиз наблюдали у пациентов, принимавших все дозы и особенно у тех, кто принимал препарат в дозе более 20 мг.
             Дозозависимое повышение уровня креатинфосфокиназы (КФК) наблюдалось у пациентов, принимавших розувастатин; в большинстве случаев оно было незначительным, бессимптомным и временным. При повышении уровня КФК (в 5 и более раз по сравнению с верхним пределом нормы) терапия разув астатином должна быть приостановлена.
-            Со стороны печени: как и при приеме других ингибиторовГМГ-КоА редуктазы, наблюдалось дозозависимое повышение уровней трансаминаз у небольшого количества пациентов. В большинстве случаев оно было незначительным, бессимптомным и временным.
-            В редких случаях возможны аллергические кожные реакции.</p>
+        </p>
         <h2>Противопоказания:</h2>
         <p>Повышенная чувствительность к розувастатину или любому компоненту таблетки;
             заболевания печени в активной фазе, включая устойчивое повышение уровней трансаминаз, которое невозможно объяснить, и любое повышение уровней трансаминаз в 3 и более раз, сравнивая с верхним пределом нормы;</p>
