--- a/rus/index-daivonex-ung.html
+++ b/rus/index-daivonex-ung.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-daivonex.css">
+    <meta name="description" content="Купить Дайвонекс мазь,Daivonex unguento по низкой цене в Украине!">
     <title>Купить лекарство Дайвонекс мазь в Украине - Daivonex unguento на Фармитал</title>
 </head>
 <body>
