--- a/rus/index-ultraproct-ung.html
+++ b/rus/index-ultraproct-ung.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-ultraproct.css">
+    <meta name="description" content="Купить Ультрапрокт мазь,Ultraproct unguento по низкой цене в Украине!">
     <title>Купить Лекарства Ультрапрокт мазь в Украине - Ultraproct unguento в Фармитал</title>
 </head>
 <body>
@@ -70,12 +71,12 @@
             Вы можете заказать Ультрапрокт мазь в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Камь янец-подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также в других населённых пунктах Украины.
         </p>
         <h2>Основные физико-химические свойства:</h2>
-        <p>мазь белая или желтоватая полупрозрачная в утубах, суппозитории желтовато-белые;</p>
+        <p>мазь белая или желтоватая полупрозрачная в утубах;</p>
         <h2>Состав препарата:</h2>
         <p>1 г мази содержит флуокортолона пивалата 0,92 мг, флуокортолона капроата 0,95 мг и цинхокаина гидрохлорида 5 мг;
             другие составляющие: 2-октилдодеканол, масло касторовое, масло касторовое гидрогенизированное, поли этиленгликоль 400 монорицин олеат, масло цитрус-розовое ароматизированное ;</p>
         <h2>Форма выпуска:</h2>
-        <p>Мазь ректальная, суппозитории ректальные.</p>
+        <p>Мазь ректальная.</p>
         <h2>Показания:</h2>
         <p>Гемороидальные узлы, поверхностные трещины заднего прохода, проктит.</p>
         <h2>Способ применения и дозы:</h2>
