--- a/index-daivonex-ung.html
+++ b/index-daivonex-ung.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-daivonex.css">
+    <meta name="description" content="Купити Дайвонекс мазь,Daivonex unguento за низькою ціною в Україні!">
     <title>Купити Ліки Дайвонекс мазь в Україні - Daivonex unguento на Фармітал</title>
 </head>
 <body>
