--- a/rus/index-advantan-50g.html
+++ b/rus/index-advantan-50g.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style-advantan.css">
+    <meta name="description" content="Купить Адвантан крем 50г,Advantan crema 50g по низкой цене в Украине!">
     <title>Купить Лекарство Адвантан крем 50г в Украине - Advantan crema 50g на фармиталь</title>
 </head>
 <body>
