--- a/xanax.html
+++ b/xanax.html
@@ -81,7 +81,7 @@
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><strong>Ціна: 1500 грн/уп.</strong></p>
+                <p class="price"><strong>Ціна: 1600 грн/уп.</strong></p>
                 <p class="stock"><b>В наявності</b></p>
             </div>
         </div>
@@ -93,10 +93,11 @@
             Ви можете замовити Ксанакс у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
         </p>
         <h2>Форма випуску та можливе дозування в асортименті Фармітал:</h2>
-        <p>Таблетки по 2 мг № 30</p>
-        <p>Таблетки по 1 мг № 30</p>
-        <p>Таблетки по 0,5 мг № 30</p>
-        <p>Таблетки по 0,25 мг № 30</p>
+        <p>Таблетки по 3 мг № 30 пролонговані - 2300грн/уп.</p>
+        <p>Таблетки по 2 мг № 30 пролонговані - 1600грн/уп.(немає в наявності)</p>
+        <p>Таблетки по 1 мг № 30 пролонговані - 1100грн/уп.</p>
+        <p>Таблетки по 1 мг звичайні № 20 - 850грн/уп.</p>
+        <p>Таблетки по 0,5 мг звичайні № 20 - 650грн/уп.</p>
         <p>Можливі інші види дозування ліків Ксанакс, Деталі за телефоном.</p>
         <h2>Склад:</h2>
         <p>1 таблетка в залежності від дозування 0,25мг;0,5мг;1мг;2мг містить алпразоламу - 0,25мг;0,5мг;1мг;2мг;</p>
