--- a/rus/xanax.html
+++ b/rus/xanax.html
@@ -81,7 +81,7 @@
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><strong>Цена: 1500 грн/уп.</strong></p>
+                <p class="price"><strong>Цена: 1600 грн/уп.</strong></p>
                 <p class="stock"><b>В наличии</b></p>
             </div>
         </div>
@@ -93,10 +93,11 @@
             Вы можете заказать Ксанакс в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Каменец- Подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также других населенных пунктах Украины.
         </p>
         <h2>Форма выпуска и возможная дозировка в ассортименте Фармитал:</h2>
-        <p>Таблетки по 2 мг №30</p>
-        <p>Таблетки по 1 мг №30</p>
-        <p>Таблетки по 0,5 мг №30</p>
-        <p>Таблетки по 0,25 мг №30</p>
+        <p>Таблетки по 3 мг пролонгированые №30 - 2300грн/уп.</p>
+        <p>Таблетки по 2 мг пролонгированые №30 - 1600грн/уп.(немає в наявності)</p>
+        <p>Таблетки по 1 мг пролонгированые №30 - 1100грн/уп.</p>
+        <p>Таблетки по 1 мг обычные №20 - 850грн/уп.</p>
+        <p>Таблетки по 0,5 мг обычные №20 - 650грн/уп.</p>
         <p>Возможны другие виды дозировки лекарств Ксанакс, Детали по телефону.</p>
         <h2>Состав:</h2>
         <p>1 таблетка в зависимости от дозировки 0,25 мг;0,5 мг;1 мг;2 мг содержит алпразолама - 0,25 мг;0,5 мг;1 мг;2 мг;</p>
