--- a/lorazepam.html
+++ b/lorazepam.html
@@ -81,7 +81,7 @@
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><strong>Ціна: 450 грн/уп.</strong></p>
+                <p class="price"><strong>Ціна: 500 грн/уп.</strong></p>
                 <p class="stock"><b>В наявності</b></p>
             </div>
         </div>
@@ -96,7 +96,7 @@
         <p>Лоразепам випускається у формі таблеток.</p>
         <ul>
             <li>Таблетки по 2,5 мг Лоразепаму розфасовані у блістери. Упаковка містить 20 таблеток по 2,5 мг.</li>
-            <li>Таблетки по 1 мг Лоразепаму розфасовані у блістери. Упаковка містить 20 таблеток по 1 мг. - <strong>під замовлення.</strong></li>
+            <li>Таблетки по 1 мг Лоразепаму розфасовані у блістери. Упаковка містить 20 таблеток по 1 мг. - 450грн/уп.</li>
         </ul>
         <h2>Склад:</h2>
         <p>Таблетки Лоразепам виконані на основі Лоразепаму.<br>
