--- a/rus/lorazepam.html
+++ b/rus/lorazepam.html
@@ -81,7 +81,7 @@
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><strong>Цена: 450 грн/уп.</strong></p>
+                <p class="price"><strong>Цена: 500 грн/уп.</strong></p>
                 <p class="stock"><b>В наличии</b></p>
             </div>
         </div>
@@ -96,7 +96,7 @@
         <p>Лоразепам выпускается в форме таблеток.</p>
         <ul>
             <li>Таблетки по 2,5 мг Лоразепама расфасованы в блистеры. Упаковка содержит 20 таблеток по 2,5 мг.</li>
-            <li>Таблетки по 1 мг Лоразепама расфасованы в блистеры. Упаковка содержит 20 таблеток по 1 мг. - <strong>под заказ.</strong></li>
+            <li>Таблетки по 1 мг Лоразепама расфасованы в блистеры. Упаковка содержит 20 таблеток по 1 мг. - 450грн/уп.</li>
         </ul>
         <h2>Состав:</h2>
         <p>Таблетки Лоразепам выполнены на основе Лоразепама.<br>
