--- a/index-medics.html
+++ b/index-medics.html
@@ -338,7 +338,7 @@
             <a href="rivotril-crapli.html">
                 <div class="rivotril-crapli-price">
                     <img class="zym" src="img/rivotril-crapli.jpg" title="Краплі Рівотріл купити" alt="купити краплі Рівотріл, Rivotril в Україні">
-                    <p class="detal-inf">Ціна: 280 грн/уп.</p>
+                    <p class="detal-inf">Ціна: 300 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -372,6 +372,22 @@
                 </div>
             </a>
         </div>
+        <div class="bromazepam">
+            <div class="bromazepam-info">
+                <h2>Бромазепам таблетки - Bromazepam таблетки</h2>
+                <p>Бромазепам має анксіолітичну, седативну, снодійну, протисудомну і центральну міорелаксуючу дію. 
+                    Анксіолітична дія зумовлена збудженням бензодіазепінових рецепторів, відбувається переважно на рівні мигдалеподібного комплексу лімбічної системи і виявляється в зменшенні емоційного напруження, зниженні тривоги, страху. 
+                    Седативний ефект зумовлений впливом на ретикулярну формацію стовбура головного мозку і неспецифічні ядра таламусу і проявляється зменшенням невротичних симптомів (тривоги, страху).
+                </p>
+                <p><a href="bromazepam.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="bromazepam.html">
+                <div class="bromazepam-price">
+                    <img class="zym" src="img/bromazepam.jpg" title="Таблетки Бромазепам купити" alt="купити таблетки бромазепам, bromazepam в Україні">
+                    <p class="detal-inf">Ціна: 480 грн/уп.</p>
+                </div>
+            </a>
+        </div>
         <div class="trittico">
             <div class="trittico-info">
                 <h2>Тріттіко 75мг таблетки - Trittico 75mg таблетки</h2>
@@ -384,6 +400,22 @@
                 <div class="trittico-price">
                     <img class="zym" src="img/trittico.jpg" title="Таблетки Тріттіко купити" alt="купити таблетки Тріттіко,trittico 75мг в Україні">
                     <p class="detal-inf">Ціна: 450 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="oki">
+            <div class="oki-info">
+                <h2>Окі(Кетопрофен) 80мг порошок - Oki(Ketoprofen) 80mg порошок</h2>
+                <p>
+                    OKI – медикамент для терапії опорно-рухового апарату.Активним інгредієнтом, що міститься в Oki, тобто речовиною, яка надає препарату його фармакологічну дію, є кетопрофен , нестероїдний протизапальний препарат (НПЗП, тобто не є кортизоном ), подібний до ібупрофену (Момент, Бруфен) з болезаспокійливою та жарознижуючою дією; простіше кажучи, він може зменшити запалення,зменшити біль,знизити наявну лихоманку.
+                    Зокрема, у рецептурі Oki активний інгредієнт містить амінокислоту лізин у формі солі, вибір якої дозволяє покращити розчинність і переносимість препарату, щоб гарантувати більш швидке всмоктування з шлунково-кишкового тракту.
+                </p>
+                <p><a href="oki.html" class="detal-inf"><b>Детальна інформація про медикамент.</b></a></p>
+            </div>
+            <a href="oki.html">
+                <div class="oki-price">
+                    <img class="zym" src="img/oki.jpg" title="Пакетики Окі купити" alt="купити гранули,порошок Окі, Oki,Кетопрофен 80мг в Україні">
+                    <p class="detal-inf">Ціна: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -694,7 +726,7 @@
             <a href="index-cytotec.html">
                 <div class="cytotec-price">
                     <img class="cyt" src="./img/cytotec.jpg" alt="купити сайтотек,cytotec,цитотек,мізопростол в Україні">
-                    <p class="detal-inf">Ціна: 850 грн/уп.</p>
+                    <p class="detal-inf">Ціна: 900 грн/уп.</p>
                 </div>
             </a>
         </div>
