--- a/rus/index-medics.html
+++ b/rus/index-medics.html
@@ -339,7 +339,7 @@
             <a href="rivotril-crapli.html">
                 <div class="rivotril-crapli-price">
                     <img class="zym" src="img/rivotril-crapli.jpg" title="Капли Ривотрил купить" alt="купить капли Ривотрил, Rivotril в Украине">
-                    <p class="detal-inf">Цена: 280 грн/уп.</p>
+                    <p class="detal-inf">Цена: 300 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -373,6 +373,22 @@
                 </div>
             </a>
         </div>
+        <div class="bromazepam">
+            <div class="bromazepam-info">
+                <h2>Бромазепам таблетки - Bromazepam таблетки</h2>
+                <p>Бромазепам оказывает анксиолитическое, седативное, снотворное, противосудорожное и центральное миорелаксирующее действие.
+                    Анксиолитическое действие обусловлено возбуждением бензодиазепиновых рецепторов, происходит преимущественно на уровне миндалевидного комплекса лимбической системы и проявляется в уменьшении эмоционального напряжения, снижении тревоги, страхе.
+                    Седативный эффект обусловлен влиянием на ретикулярную формацию ствола головного мозга и неспецифические ядра таламуса и проявляется уменьшением невротических симптомов (тревоги, страха).
+                </p>
+                <p><a href="bromazepam.html" class="detal-inf"><b>Подробная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="bromazepam.html">
+                <div class="bromazepam-price">
+                    <img class="zym" src="img/bromazepam.jpg" title="Таблетки Бромазепам купить" alt="купить таблетки бромазепам, bromazepam в Украине">
+                    <p class="detal-inf">Цена: 480 грн/уп.</p>
+                </div>
+            </a>
+        </div>
         <div class="trittico">
             <div class="trittico-info">
                 <h2>Триттико 75мг таблетки - Trittico 75мг таблетки</h2>
@@ -385,6 +401,22 @@
                 <div class="trittico-price">
                     <img class="zym" src="img/trittico.jpg" title="Таблетки Триттико купить" alt="купить таблетки Триттико,trittico 75мг в Украине">
                     <p class="detal-inf">Цена: 450 грн/уп.</p>
+                </div>
+            </a>
+        </div>
+        <div class="oki">
+            <div class="oki-info">
+                <h2>Оки(Кетопрофен) 80мг порошок - Oki(Ketoprofen) 80mg порошок</h2>
+                <p>
+                    OKI – медикамент для терапии опорно-двигательного аппарата. Активным ингредиентом, содержащимся в Oki, то есть веществом, оказывающим препарату его фармакологическое действие, является кетопрофен, нестероидный противовоспалительный препарат (НПВП, т.е. ) с болеутоляющим и жаропонижающим действием; проще говоря, он может уменьшить воспаление, уменьшить боль, снизить имеющуюся лихорадку.
+                    В частности, в рецептуре Oki активный ингредиент содержит аминокислоту лизин в форме соли, выбор которой позволяет улучшить растворимость и переносимость препарата, чтобы гарантировать более быстрое всасывание из желудочно-кишечного тракта.
+                </p>
+                <p><a href="oki.html" class="detal-inf"><b>Подробная информация о медикаменте.</b></a></p>
+            </div>
+            <a href="oki.html">
+                <div class="oki-price">
+                    <img class="zym" src="img/oki.jpg" title="Пакетики Оки купить" alt="купить гранулы,порошок Оки, Oki,Кетопрофен 80мг в Украине">
+                    <p class="detal-inf">Цена: 350 грн/уп.</p>
                 </div>
             </a>
         </div>
@@ -696,7 +728,7 @@
             <a href="index-cytotec.html">
                 <div class="cytotec-price">
                     <img class="cyt" src="./img/cytotec.jpg" alt="купить сайтотек,мизопростол,cytotec,цитотек в Украине">
-                    <p class="detal-inf">Цена: 850 грн/уп.</p>
+                    <p class="detal-inf">Цена: 900 грн/уп.</p>
                 </div>
             </a>
         </div>
