--- a/rus/valium-crapli.html
+++ b/rus/valium-crapli.html
@@ -93,10 +93,12 @@
             Вы можете заказать Валиум в городах: Одесса, Херсон, Чернигов, Северодонецк, Бердянск, Бровары, Днепр, Винница, Киев, Славянск, Полтава, Краматорск, Белая Церковь, Каменское, Мариуполь, Черновцы, Александрия, Каменец- Подольский, Львов, Запорожье, Кропивницкий, Житомир, Ивано-Франковск, Сумы, Черкассы, Константиновка, Мелитополь, Кривой Рог, Ровно, Луцк, Никополь, Павлоград, Ужгород, Кременчуг, Лисичанск, Хмельницкий, Тернополь, Харьков, Николаев, а также других населенных пунктах Украины.
         </p>
         <h2>Форма выпуска:</h2>
-        <p>Валиум выпускается в форме раствора</p>
-        <ul>
-            <li>Раствор для внутреннего применения, содержащий 5 мг/1 мл диазепама</li>
-        </ul>
+         <p>Валиум выпускается в форме раствора</p>
+         <h2>Форма выпуска и возможная дозировка в ассортименте Фармитал:</h2>
+         <p>Капли Valium(Диазепам) 5мг/мл - 700грн за уп.</p>
+         <p>Капли Диазепам Mylan Generics 5мг/мл - 650грн за уп. </p>
+         <h2>Капли Диазепам Mylan Generics - Фото:</h2>
+         <img class="foto" src="img/diazepam.jpg" title="купить капли диазепам" alt="Диазепам капли">
         <h2>Фармакологические свойства:</h2>
         <p>Противосудорожный препарат бензодиазепинового ряда – Валиум, оказывает терапевтическое влияние благодаря основному компоненту диазепама. Медикамент усиливает влияние гамма-аминомасляной кислоты, замедляя передачу нервных импульсов, снижает возбудимость подкорки головного мозга и скорость постсинаптических спинальных рефлексов. Пресинаптическое торможение помогает предотвратить распространение эпилептогенной активности, не влияя на возбуждение в очаге.
             Анксиолитическое действие капель Валиума проявляется снижением эмоционального напряжения, тревоги, беспокойства и страха путем взаимодействия с миндалевидным комплексом. Влияя на неспецифические ядра зрительного бугра и ретикулярную формацию препарат снижает невротические симптомы.
