--- a/rus/xanax.html
+++ b/rus/xanax.html
@@ -94,7 +94,7 @@
         </p>
         <h2>Форма выпуска и возможная дозировка в ассортименте Фармитал:</h2>
         <p>Таблетки по 3 мг пролонгированые №30 - 2300грн/уп.</p>
-        <p>Таблетки по 2 мг пролонгированые №30 - 1700грн/уп.(немає в наявності)</p>
+        <p>Таблетки по 2 мг пролонгированые №30 - 1700грн/уп.</p>
         <p>Таблетки по 1 мг пролонгированые №30 - 1150грн/уп.</p>
         <p>Таблетки по 1 мг обычные №20 - 900грн/уп.</p>
         <p>Таблетки по 0,5 мг обычные №20 - 700грн/уп.</p>
