--- a/valium-crapli.html
+++ b/valium-crapli.html
@@ -94,9 +94,11 @@
         </p>
         <h2>Форма випуску:</h2>
         <p>Валіум випускається у формі розчину</p>
-        <ul>
-            <li>Розчин для внутрішнього вживання, що містить 5мг/1мл діазепаму</li>
-        </ul>
+        <h2>Форма випуску та можливе дозування в асортименті Фармітал:</h2>
+        <p>Краплі Valium(Діазепам) 5мг/мл - 700грн за уп.</p>
+        <p>Краплі Діазепам Mylan Generics 5мг/мл - 650грн за уп. </p>
+        <h2>Краплі Діазепам Mylan Generics - Фото:</h2>
+        <img class="foto" src="img/diazepam.jpg" title="купити краплі діазепам" alt="Діазепам краплі">
         <h2>Фармакологічні властивості:</h2>
         <p>Протисудомний препарат бензодіазепінового ряду – Валіум, надає терапевтичний вплив завдяки основному компоненту діазепаму. Медикамент посилює вплив гамма-аміномасляної кислоти, уповільнюючи передачу нервових імпульсів, знижує збудливість підкорки головного мозку та швидкість постсинаптичних спинальних рефлексів. Пресинаптичне гальмування допомагає запобігти поширенню епілептогенної активності, не впливаючи на збудження в осередку.
             Анксіолітична дія крапель Валіум проявляється зниженням емоційної напруги, тривоги, занепокоєння та страху шляхом взаємодії з мигдалеподібним комплексом. Впливаючи на неспецифічні ядра зорового бугра та ретикулярну формацію, препарат знижує невротичні симптоми.
