--- a/bromazepam.html
+++ b/bromazepam.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=2.0">
-    <title>Таблетки Ксанакс,Xanax,Алпразолам для лікування тривожних розладів</title>
-    <meta name="description" content="Таблетки Ксанакс,Алпразолам,Xanax,Alprazolam для лікування хвороб нервової системи, а саме тривожних та панічних розладів, змішані тривожно-депресивні розлади, невротичні реактивно-депресивні розлади,що супроводжуються наростаючою втратою інтересу до навколишнього світу">
-    <meta name="keywords" content="Купити Ксанакс таблетки в Україні,Xanax купити в Україні, купити Ксанакс 2мг,купити Xanax 2mg таблетки , купити Xanax, Ксанакс таблетки 2мг купити, Алпразолам таблетки купити В Україні,купити Алпразолам, Alprazolam таблетки купити">
+    <title>Таблетки Бромазепам, Bromazepam для лікування тривожних розладів</title>
+    <meta name="description" content="Таблетки Бромазепам, Bromazepam для лікування хвороб нервової системи, Бромазепам має анксіолітичну, седативну, снодійну, протисудомну і центральну міорелаксуючу дію. Анксіолітична дія зумовлена збудженням бензодіазепінових рецепторів.">
+    <meta name="keywords" content="Купити Бромазепам таблетки в Україні,bromazepam купити в Україні, купити Бромазепам 3мг,купити bromazepam 3mg таблетки , купити bromazepam, Бромазепам таблетки 3мг купити, купити бромазепам">
     <meta name="robots" content="index follow">
     <meta name="author" content="Інтернет Аптека FarmItal">
     <meta name="publisher" content="FarmItal">
-    <link rel="canonical" href="https://farmital.com.ua/xanax.html">
+    <link rel="canonical" href="https://farmital.com.ua/bromazepam.html">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <script type="application/ld+json">[ {
@@ -23,10 +23,10 @@
         "priceRange" : "150-1900 грн"
     } ]
     </script>
-    <meta property="og:title" content="Таблетки Ксанакс,Xanax,Алпразолам для лікування тривожних розладів">
-    <meta property="og:description" content="Таблетки Ксанакс,Алпразолам,Xanax,Alprazolam для лікування хвороб нервової системи, а саме тривожних та панічних розладів, змішані тривожно-депресивні розлади, невротичні реактивно-депресивні розлади,що супроводжуються наростаючою втратою інтересу до навколишнього світу">
+    <meta property="og:title" content="Таблетки Бромазепам, Bromazepam для лікування тривожних розладів">
+    <meta property="og:description" content="Таблетки Бромазепам, Bromazepam для лікування хвороб нервової системи, Бромазепам має анксіолітичну, седативну, снодійну, протисудомну і центральну міорелаксуючу дію. Анксіолітична дія зумовлена збудженням бензодіазепінових рецепторів.">
     <meta property="og:image" content="https://farmital.com.ua/img/farmital-logo.png">
-    <meta property="og:url" content="https://farmital.com.ua/xanax.html">
+    <meta property="og:url" content="https://farmital.com.ua/bromazepam.html">
     <meta property="og:type" content="website">
     <link rel="stylesheet" href="css/style-colchicine.css">
 </head>
@@ -70,37 +70,32 @@
         </div>
     </header>
     <div class="wrapper">
-        <h1>Ксанакс(Алпразолам) 2мг таблетки - Xanax(Alprazolam) 2mg таблетки</h1>
+        <h1>Купити Бромазепам таблетки - Bromazepam таблетки</h1>
         <p class="prod">Виробник: <b>Італія</b></p>
         <div class="main-price clear">
             <div class="foto-colchicine">
-                <img class="foto" src="img/xanax.jpg" title="Купити Ксанакс(Алпразолам)" alt="купити Ксанакс, Алпразолам в Україні">
+                <img class="foto" src="img/bromazepam-max.jpg" title="Купити Бромазепам" alt="купити bromazepam,Бромазепам в Україні">
             </div>
             <div class="price-colchicine">
                 <h3 class="block">Контактна інформація:</h3>
                 <p><a href="tel:+380979301788" class="phone-price">+38(097) 930-17-88</a></p>
                 <p><a href="tel:+380959371699" class="phone-price">+38(095) 937-16-99</a></p>
                 <p><a href="tel:+380631294099" class="phone-price">+38(063) 129-40-99</a></p>
-                <p class="price"><strong>Ціна: 1700 грн/уп.</strong></p>
+                <p class="price"><strong>Ціна: 480 грн/уп.</strong></p>
                 <p class="stock"><b>В наявності</b></p>
             </div>
         </div>
     </div>
     <div class="main-info wrapper">
-        <h2>Купити Ксанакс(Алпразолам) 2мг таблетки - Xanax(Alprazolam) 2mg таблетки:</h2>
-        <p>Саме в FarmItal ви можете купити таблетки Xanax, Ксанакс(Алпразолам) в Україні, Гарантовано Якісний!</p>
-        <p>Доставка Xanax здійснюється транспортними компаніями, терміни виконання замовлення обумовлюються менеджером Фармітал.
-            Ви можете замовити Ксанакс у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
+        <h2>Купити Бромазепам таблетки - Bromazepam таблетки:</h2>
+        <p>Саме в FarmItal ви можете купити таблетки Bromazepam, Бромазепам в Україні, Гарантовано Якісний!</p>
+        <p>Доставка Bromazepam здійснюється транспортними компаніями, терміни виконання замовлення обумовлюються менеджером Фармітал.
+            Ви можете замовити Бромазепам у містах: Одеса, Херсон, Чернігів, Сєверодонецьк, Бердянськ, Бровари, Дніпро, Вінниця, Київ, Слов'янськ, Полтава, Краматорськ, Біла Церква, Кам'янське, Маріуполь, Чернівці, Олександрія, Кам'янець-Подільський, Львів, Запоріжжя, Кропивницький, Житомир, Івано-Франківськ, Суми, Черкаси, Костянтинівка, Мелітополь, Кривий Ріг, Рівне, Луцьк, Нікополь, Павлоград, Ужгород, Кременчук, Лисичанськ, Хмельницький, Тернопіль, Харків, Миколаїв, а також в інших населених пунктах України.
         </p>
         <h2>Форма випуску та можливе дозування в асортименті Фармітал:</h2>
-        <p>Таблетки по 3 мг № 30 пролонговані - 2300грн/уп.</p>
-        <p>Таблетки по 2 мг № 30 пролонговані - 1700грн/уп.</p>
-        <p>Таблетки по 1 мг № 30 пролонговані - 1150грн/уп.</p>
-        <p>Таблетки по 1 мг звичайні № 20 - 900грн/уп.</p>
-        <p>Таблетки по 0,5 мг звичайні № 20 - 700грн/уп.</p>
-        <p>Можливі інші види дозування ліків Ксанакс, Деталі за телефоном.</p>
+        <p>Таблетки по 3 мг № 20 - 480грн/уп.</p>
         <h2>Склад:</h2>
-        <p>1 таблетка в залежності від дозування 0,25мг;0,5мг;1мг;2мг містить алпразоламу - 0,25мг;0,5мг;1мг;2мг;</p>
+        <p>1 таблетка містить бромазепаму 3мг;</p>
         <p>допоміжні речовини: лактоза, целюлоза мікрокристалічна, натрію докузат, натрію бензоат, кремнію діоксид колоїдний, крохмаль кукурудзяний, магніюстеарат;</p>
         <h2>Фармакологічні властивості:</h2>
         <p>Фармакодинаміка. Препарат має всі властивості бензодіазепінів: відзначається анксіолітична, гіпноседативна, міорелаксуюча та проти судомна дія. Разом з тим всі представники групи бензодіазепінів відрізняються між собою запитомою вагою перелічених компонентів у спектрі психотропного ефекту.
@@ -116,15 +111,13 @@
         </ul>
         <h2>Побічні дії</h2>
         <ul>
-            <li>Побічні ефекти, якщо зустрічаються, то спостерігаються на самому початку терапії Ксанаксом і поступово минають при подальшому застосуванні препарату або при зниженні дози.</li>
-            <li>У хворих з тривогою, тривожно-депресивним синдромом і невротичною депресією найчастіше спостерігаються сонливість, запаморочення. Рідше відзначаються такі ефекти, як головний біль, депресія, “розмитість” зору, інсомнія, нервозність/тривога, тремор, зміна ваги тіла, порушення пам’яті, розлади координації, можливі розлади шлунково-кишкового тракту та вегетативні прояви.</li>
-            <li>Поряд з цим можуть мати місце небажані явища типу дистонії, роздратованості, анорексії, стомленості, нечіткості мови, жовтяниці, м’язовоїслабкості, змін лібідо, порушень менструальної функції, нетримання сечі (або, навпаки, затримки сечі) і порушення функції печінки. Дуже рідко відзначається підвищення внутрішньо очного тиску.</li>
-            <li>У хворих з панічними розладами серед побічних явищ найчастіше відмічаються седація, сонливість, стомлюваність, атаксія, порушення координації і змазана мова. Рідше спостерігаються зміни настрою, шлунково-кишкова симптоматика, дерматити, порушення пам’яті, сексуальні дисфункції, інтелектуальні порушення і сплутаність свідомості.</li>
-            <li>При прийомі Ксанаксу, як і інших бензодіазепінів, рідко повідомляється про такі побічні ефекти, як труднощі концентрації уваги, сплутаність свідомості, збудженість, галюцинації і такі реакції, як роздратованість, ажитація, напади гніву, агресивна або ворожа поведінка. В багатьох із цих випадків хворі також отримували інші психотропні препарати і/або мали інші психічні відхилення.</li>
-            <li>Невелика кількість повідомлень дозволяє припустити, що хворі з агресивною поведінкою в анамнезі, хворі, що зловживають алкоголем або наркотиками, мають більш високий ризик розвитку подібних реакцій. Повідомлялося про виникнення епізодів роздратованості, ворожості і нав’язливих думок у хворихз пост травматичними реактивними розладами при припиненні терапії алпразоламом.</li>
+            <li>при неврозах;</li>
+            <li>при психопатії з тривогою, збудженням, нервовою напругою, дратівливістю;</li>
+            <li>при функціональних психосоматичних розладах;</li>
+            <li>при хронічному алкоголізмі (абстинентний синдром).</li>
         </ul>
         <h2>Протипоказання:</h2>
-        <p>Ксанакс протипоказаний хворим з підвищеною чутливістю до бензодіазепінів.</p>
+        <p>Бромазепам протипоказаний хворим з підвищеною чутливістю до бензодіазепінів.</p>
         <h2>Умови зберігання:</h2>
         <p>Зберігати у недоступному для дітей місці при кімнатній температурі 15 - 25°С.</p>
     </div>
